net/ceph13: upgrade 13.2.6 -> 13.2.8

This is the eighth release in the Ceph Mimic stable release series. Its sole
purpose is to fix a regression that found its way into the previous release.
Notable Changes

  Due to a missed backport, clusters in the process of being upgraded from
  13.2.6 to 13.2.7 might suffer an OSD crash in build_incremental_map_msg.
  This regression was reported in https://tracker.ceph.com/issues/43106
  and is fixed in 13.2.8 (this release). Users of 13.2.6 can upgrade to
  13.2.8 directly, i.e. skip 13.2.7 to avoid this.

PR:		242886
Submitted by:	Willem Jan Withagen <wjw@digiware.nl> (maintainer)